@@ -4,6 +4,7 @@
 /* { dg-require-effective-target __float128 } */
 /* { dg-require-effective-target base_quadfloat_support } */
 /* { dg-require-effective-target int128 } */
+/* { dg-require-effective-target fenv } */
 /* { dg-options "-frounding-math" } */
 /* { dg-add-options __float128 } */
 
