@@ -2,6 +2,7 @@
    float.  */
 /* { dg-do run } */
 /* { dg-require-effective-target int128 } */
+/* { dg-require-effective-target fenv } */
 /* { dg-options "-frounding-math" } */
 
 #include <fenv.h>
